# pi-gpt-ml-demo-jobs

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.pi/: settings.json
scripts/: dashboard.sh  train_job.sh
slides/: mnist-renku-demo.md
slides/sdsc-renku-demo/: global-bottom.vue  package-lock.json  package.json  slides.md  style.css
src/mnist_jobs/: __init__.py  artifacts.py  data.py  model.py  train.py
tests/: test_data.py
