[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mnist-renku-jobs-demo"
version = "0.1.0"
description = "Renku non-interactive MNIST training jobs demo"
requires-python = ">=3.10"
dependencies = [
  "numpy==1.26.4",
  "torch==2.3.1",
  "streamlit==1.35.0",
  "pillow==10.3.0",
  "matplotlib==3.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
